# agent-system

./: .env  app.py  data_protection.py  pyproject.toml  render.yaml  requirements.txt  updatedb.py
instance/: agent_system.db
templates/: 404.html  500.html  add_agent.html  admin_agents.html  admin_change_password.html  admin_customer_enrichment.html  admin_customer_map.html  admin_customers.html  admin_dashboard.html  admin_devices.html  admin_director.html  admin_excel_tools.html  admin_logs.html  admin_mys.html  admin_mys_downloads.html  admin_search.html  admin_security.html  admin_sync.html  admin_transacted_data.html  admin_upload.html  admin_work_log.html  agent_dashboard.html  agent_device_pending.html  agent_device_waiting.html  agent_director.html  agent_mys.html  agent_search.html  agent_settings.html  agent_transacted_data.html  base.html  bulk_upload_agents.html  customer_view.html  db_scan.html  db_scan_progress.html  db_scan_report.html  force_change_password.html  forgot_password.html  login.html  manual_mapping.html  merge_data.html  (+6 more)
uploads/: 20260401_005703_WTPSB_NEGOTIATOR_LIST_UPDATED_DECEMBER_2025_WHATSAPP_GROUP.xlsx  search_results_3.xlsx
