[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "1.0.0"
requires-python = ">=3.9,<3.12"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "Werkzeug==3.0.6",
    "python-dateutil==2.9.0",
    "pytz==2025.1",
    "requests==2.32.3",
    "gunicorn==22.0.0",
    "psycopg2-binary==2.9.10",
]